Qute a few updates
- new paths
- fresh markup for the panel
- new grid
-updated tool tip function

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,3 +10,16 @@ body {
 #step1 {
     display: block;
 }
+#column1 {
+	padding-right:15px;
+}
+#column2 {
+	display: none;
+	padding-right:15px;
+}
+#column3 {
+	display: none;
+}
+#test-api-insert {
+	display: none;
+}
