--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,6 @@ body {
 #test-api-insert {
 	display: none;
 }
-.padding_top_grid {
-	padding-top: 10px;
+.margin-top-grid {
+	margin-top: 15px;
 }
