Auto SQL updates
Just text updates to summary showing SQL code

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,3 +53,9 @@ body {
 .slds-notify_container {
 	z-index: 9000!important;
 }
+#control-group-association {
+	display:none;
+}
+#control-group-association {
+	display:none;
+}
